--- a/package.json
+++ b/package.json
@@ -1,47 +1,38 @@
 {
-  "name": "wine-subscription-flow",
-  "version": "0.1.0",
-  "homepage": "https://digitactluke.github.io/wine-subscription-mock",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+    "name": "wine-subscription-flow",
+    "version": "0.1.0",
+    "homepage": "https://digitactluke.github.io/wine-subscription-mock",
+    "private": true,
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "bootstrap": "^5.1.3",
+        "clsx": "^1.2.1",
+        "lodash": "^4.17.21",
+        "react": "^18.1.0",
+        "react-bootstrap": "^2.3.1",
+        "react-dom": "^18.1.0",
+        "react-query": "^3.39.2",
+        "react-router-dom": "^6.4.3"
+    },
+    "devDependencies": {
+        "@types/lodash": "^4.14.189",
+        "@types/node": "^18.8.3",
+        "@types/react": "^18.0.24",
+        "@types/react-dom": "^18.0.8",
+        "@typescript-eslint/eslint-plugin": "^5.40.0",
+        "@typescript-eslint/parser": "^5.40.0",
+        "@vitejs/plugin-react": "^2.2.0",
+        "eslint": "^8.25.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.5.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.7.1",
+        "typescript": "^4.6.4",
+        "vite": "^3.2.3"
+    }
 }
