--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
         "@typescript-eslint/eslint-plugin": "^5.40.0",
         "@typescript-eslint/parser": "^5.40.0",
         "@vitejs/plugin-react": "^2.2.0",
+        "autoprefixer": "^10.4.13",
         "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^3.5.1",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.11",
+        "postcss": "^8.4.19",
+        "postcss-import": "^15.0.0",
         "prettier": "^2.7.1",
+        "tailwindcss": "^3.2.4",
         "typescript": "^4.6.4",
         "vite": "^3.2.3"
     }
