--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tanstack/react-query": "^4.18.0",
         "bootstrap": "^5.1.3",
         "clsx": "^1.2.1",
         "lodash": "^4.17.21",
         "react": "^18.1.0",
         "react-bootstrap": "^2.3.1",
         "react-dom": "^18.1.0",
-        "react-query": "^3.39.2",
         "react-router-dom": "^6.4.3"
     },
     "devDependencies": {
